--- a/Painting App Js/style.css
+++ b/Painting App Js/style.css
@@ -5,5 +5,12 @@
 }
 #canvas
 {
-
+border:solid 1px black;
+}
+#color{
+    padding:0px;
+    border:none;
+    background:none;
+    width:44px;
+    height:44px;
 }
